--- a/core/templates/dashboard.html
+++ b/core/templates/dashboard.html
@@ -1135,11 +1135,11 @@
     >
       <!-- LEFT: PHOTO + BASIC INFO -->
       <div class="flex flex-col sm:flex-row items-center gap-6">
-        {% load static %}
+    {% load static %}
 
-       <img
-  src="{{ profile.image.url }}"
-  alt="{{ profile.name }}"
+<img
+  src="{% static 'images/profilepicture.jpeg' %}"
+  alt="Shankar Bhimappa Parit"
   class="w-36 h-36 rounded-2xl object-cover shadow-xl border-4 border-white"
 />
 
