--- a/core/templates/dashboard.html
+++ b/core/templates/dashboard.html
@@ -1137,11 +1137,9 @@
       <div class="flex flex-col sm:flex-row items-center gap-6">
     {% load static %}
 
-<img
-  src="{% static 'images/profilepicture.jpeg' %}"
-  alt="Shankar Bhimappa Parit"
-  class="w-36 h-36 rounded-2xl object-cover shadow-xl border-4 border-white"
-/>
+<img src="/static/images/profilepicture.jpeg"
+     alt="Shankar Bhimappa Parit"
+     class="w-36 h-36 rounded-2xl object-cover shadow-xl border-4 border-white">
 
 
         <div class="text-center sm:text-left">
